# FluxFS

./: .gitignore  CHANGELOG.md  CLAUDE-CODE-PROMPT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  fluxfs-architecture.md
.cursor/rules/: git-push-after-phase.mdc
.github/workflows/: ci.yml
config/: default.toml
docs/: INSTALL.md  ROADMAP-v0.2.md
packaging/github/: prepend-download-links.sh
packaging/linux/: build-deb.sh  fluxfs.desktop
packaging/linux/debian/: postinst  prerm
packaging/macos/: build-dmg.sh
packaging/windows/: add-to-path.ps1  build-installer.ps1  installer.nsi  remove-from-path.ps1
src/: errors.rs  lib.rs  main.rs  paths.rs
src/cli/: commands.rs  mod.rs  runner.rs
src/config/: mod.rs  parser.rs  rules.rs  size.rs  types.rs
src/dedup/: detector.rs  mod.rs
src/gui/: app.rs  mod.rs
src/hasher/: content.rs  mod.rs
src/index/: display.rs  mod.rs  persistence.rs  search.rs  store.rs
src/ipc/: mod.rs
src/reporting/: activity.rs  format.rs  mod.rs  status.rs
src/rules/: actions.rs  engine.rs  matcher.rs  mod.rs
src/scanner/: metadata.rs  mod.rs  walker.rs
src/service/: launchd.rs  mod.rs  systemd.rs  windows.rs
src/watcher/: daemon.rs  debounce.rs  handler.rs  mod.rs
tests/: integration.rs
tests/integration/: test_dedup.rs  test_rules.rs  test_scanner.rs  test_search.rs  test_watcher.rs
