[package]
name = "fluxfs"
version = "0.1.0"
edition = "2021"
description = "Intelligent filesystem autopilot"
license = "MIT"
authors = ["Maneesh Jupalle <maneeshreddy28@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
notify = "6"
walkdir = "2"
rayon = "1"
sha2 = "0.10"
glob = "0.3"
nucleo-matcher = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["rt", "signal", "macros"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
