[package]
name = "fluxfs"
version = "0.2.0-alpha.2"
edition = "2021"
description = "Intelligent filesystem autopilot — watch, organize, deduplicate, and search your files"
license = "MIT"
authors = ["Maneesh Jupalle <maneeshreddy28@gmail.com>"]
repository = "https://github.com/ManeeshJupalle/FluxFS"
homepage = "https://github.com/ManeeshJupalle/FluxFS"
readme = "README.md"
keywords = ["filesystem", "cli", "deduplication", "file-organizer", "fuzzy-search"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "fluxfs"
path = "src/lib.rs"

[[bin]]
name = "fluxfs"
path = "src/main.rs"

[[bin]]
name = "flux"
path = "src/main.rs"

[[bin]]
name = "fluxfs-tray"
path = "src/bin/tray.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
notify = "6"
walkdir = "2"
rayon = "1"
sha2 = "0.10"
glob = "0.3"
nucleo-matcher = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "time", "sync"] }
tray-icon = "0.19"
muda = "0.15"
winit = { version = "0.30", default-features = false, features = ["rwh_05"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[package.metadata.deb]
maintainer = "Maneesh Jupalle <maneeshreddy28@gmail.com>"
copyright = "2026, Maneesh Jupalle"
license-file = ["LICENSE", "4"]
extended-description = """\
FluxFS — intelligent filesystem autopilot. Watch Downloads, auto-organize \
files, deduplicate by content, and fuzzy-search your filesystem from the CLI."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/flux", "usr/bin/", "755"],
    ["target/release/fluxfs", "usr/bin/", "755"],
    ["target/release/fluxfs-tray", "usr/bin/", "755"],
    ["packaging/linux/fluxfs.desktop", "usr/share/applications/", "644"],
]
maintainer-scripts = "packaging/linux/debian"
